--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Simple Reddit Client",
   "main": "index.js",
   "scripts": {
-    "devserver": "./node_modules/.bin/webpack serve --open",
+    "devserve": "./node_modules/.bin/webpack serve --open",
+    "serve": "./node_modules/.bin/nodemon --exec babel-node ./backend/server.js",
     "build": "./node_modules/.bin/webpack --mode development",
-    "start": "./node_modules/.bin/nodemon --exec babel-node ./backend/server.js"
+    "openBrowser": "sleep 1 && ./node_modules/.bin/open-cli http://localhost:9000",
+    "start": "npm-run-all build -p serve openBrowser"
   },
   "repository": {
     "type": "git",
@@ -35,6 +37,8 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5",
+    "open-cli": "^6.0.1",
     "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
