--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple Reddit Client",
   "main": "index.js",
   "scripts": {
+    "develop": "npm-run-all -p devserve serve",
     "devserve": "./node_modules/.bin/webpack serve --open",
     "serve": "./node_modules/.bin/nodemon --exec babel-node ./backend/server.js",
     "build": "./node_modules/.bin/webpack --mode development",
@@ -23,6 +24,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "js-base64": "^3.6.0",
