--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@babel/preset-react": "^7.12.10",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "style-loader": "^2.0.0",
+    "css-loader": "^5.0.1",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "open-cli": "^6.0.1",
