Added production url to env file

--- a/env.example
+++ b/env.example
@@ -1,2 +1,3 @@
 REDDIT_APP_ID='emRHZDYzVEV2TVl6MEE='
 REDDIT_APP_SECRET='alptQmNLczNnaUo4YlVfZERROVlKTTJkWnlHc0Zn'
+PRODUCTION_URL=http://deviget.sellnow.marketing
