--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "open-cli": "^6.0.1",
+    "path-browserify": "^1.0.1",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
