Added dotenv to React in order to handle environoment

--- a/env.example
+++ b/env.example
@@ -1,3 +1,5 @@
+APP_ENV=Development
 REDDIT_APP_ID='emRHZDYzVEV2TVl6MEE='
 REDDIT_APP_SECRET='alptQmNLczNnaUo4YlVfZERROVlKTTJkWnlHc0Zn'
-PRODUCTION_URL=http://deviget.sellnow.marketing
+PRODUCTION_URL=https://master.dktwwyo2x0b29.amplifyapp.com
+DEVELOPMENT_URL=http://localhost:9000
