--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-APP_ENV=Development
+APP_ENV=Production
 REDDIT_APP_ID='emRHZDYzVEV2TVl6MEE='
 REDDIT_APP_SECRET='alptQmNLczNnaUo4YlVfZERROVlKTTJkWnlHc0Zn'
 PRODUCTION_URL=https://master.dktwwyo2x0b29.amplifyapp.com
