Change app_env to prod 2

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 APP_ENV=Production
 REDDIT_APP_ID='emRHZDYzVEV2TVl6MEE='
 REDDIT_APP_SECRET='alptQmNLczNnaUo4YlVfZERROVlKTTJkWnlHc0Zn'
-PRODUCTION_URL=https://master.dktwwyo2x0b29.amplifyapp.com
+PRODUCTION_URL=http://deviget.clickmedia.com.mx
 DEVELOPMENT_URL=http://localhost:9000
