Added test module and home.spec.js

--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-APP_ENV=Production
+APP_ENV=production
 REDDIT_APP_ID='emRHZDYzVEV2TVl6MEE='
 REDDIT_APP_SECRET='alptQmNLczNnaUo4YlVfZERROVlKTTJkWnlHc0Zn'
 PRODUCTION_URL=http://deviget.clickmedia.com.mx
