--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prodBuild": "./node_modules/.bin/webpack --mode production",
     "production": "npm run prodBuild",
     "openBrowser": "sleep 1 && ./node_modules/.bin/open-cli http://localhost:9000",
+    "test": "jest",
     "start": "npm-run-all build -p serve openBrowser"
   },
   "repository": {
@@ -45,11 +46,18 @@
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@types/jest": "^26.0.20",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^5.0.1",
     "dotenv-webpack": "^6.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "file-loader": "^6.2.0",
+    "jest": "^26.6.3",
+    "jest-enzyme": "^7.1.2",
+    "jest-transform-stub": "^2.0.0",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
