--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "devserve": "./node_modules/.bin/webpack serve --open",
     "serve": "./node_modules/.bin/nodemon --exec babel-node ./backend/server.js",
     "prodServe": "node ./backend/server.js",
-    "build": "./node_modules/.bin/webpack --mode development",
-    "prodBuild": "./node_modules/.bin/webpack --mode production",
-    "production": "npm run prodBuild",
+    "builddev": "./node_modules/.bin/webpack --mode development",
+    "build": "./node_modules/.bin/webpack --mode production",
+    "production": "npm run build",
     "openBrowser": "sleep 1 && ./node_modules/.bin/open-cli http://localhost:9000",
     "test": "jest",
-    "start": "npm-run-all build -p serve openBrowser"
+    "start": "npm-run-all builddev -p serve openBrowser"
   },
   "repository": {
     "type": "git",
